--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,7 @@ failure = "0.1.8"
 failure_derive = "0.1.8"
 num-traits = "0.2"
 num-derive = "0.3"
-crossbeam = { version = "0.7.3", optional = true }
-triggered = { version = "0.1.1", optional = true }
+tokio = { version = "0.2.2", optional = true, features = ["full"] }
 
 [dev-dependencies]
 strum = "0.19.2"
@@ -26,3 +25,6 @@ log = "0.4.11"
 env_logger = "0.7.1"
 rand = "0.7"
 async-std = "1.6.3"
+
+[features]
+async = ["tokio"]
