--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,15 +16,15 @@ failure = "0.1.8"
 failure_derive = "0.1.8"
 num-traits = "0.2"
 num-derive = "0.3"
-tokio = { version = "0.3.3", optional = true, features = ["full"] }
+tokio = { version = "0.3.3", optional = true, features = ["sync"] }
 
 [dev-dependencies]
+tokio = { version = "0.3.3", features = ["sync", "rt"] }
 strum = "0.19.5"
 strum_macros = "0.19.4"
 log = "0.4.11"
 env_logger = "0.8.1"
 rand = "0.7"
-async-std = "1.7.0"
 
 [features]
 async = ["tokio"]
